<resources>
    <string name="app_name">VidInv</string>
    <string name="game_title">Game name example</string>
    <string name="game_banner">Banner from the current game selected</string>
    <string name="description_title">Description</string>
    <string name="description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
        vitae mauris nulla. In volutpat lacus mi, eget imperdiet orci dictum quis. Suspendisse
        facilisis malesuada commodo. Fusce ante tortor, maximus sit amet hendrerit quis, rutrum
        vitae mauris. Mauris diam sem, imperdiet ac lorem non, interdum blandit magna. Suspendisse
        ut velit nec neque viverra gravida eu vel eros. Fusce mauris diam, luctus sit amet tincidunt
        non, dictum nec libero. Nam blandit mi vitae diam eleifend, eu tempus tellus fringilla.
        Etiam ut purus purus. Integer imperdiet in lectus at viverra. Sed vitae urna quis odio
        ullamcorper placerat. Aliquam elementum velit nec orci volutpat aliquet. Nulla quam risus,
        iaculis ut tristique nec, dapibus eu dui.
    </string>
    <string name="details_title">Details</string>
    <string name="length_title">Game Length</string>
    <string name="score_title">Community Score</string>
    <string name="release_title">Release date</string>
    <string name="release_date">29/01/2019</string>
    <string name="devs_title">Developer</string>
    <string name="links_title">Links</string>
    <string name="textfield_label">text</string>
    <string name="textfield_banner">Generic label</string>
    <string name="item_list_content_desc">Item from a list</string>
    <string name="search_hint">Search video games</string>
    <string name="hint_username">username</string>

    <string name="username_title">Username</string>
    <string name="username_desc">Name with which you will be know in the app</string>

    <string name="dialog_list_title">Lists</string>
    <string name="dialog_list_summary">Pick a list to save the game</string>
    <string name="score_info">Score (%1s/10)</string>
    <string name="complete_list">Complete</string>
    <string name="playing_list">Playing</string>
    <string name="planned_play_list">Pending</string>
    <string name="dropped_list">Dropped</string>
    <string name="not_found_user">Enter a username in Settings in order to save your lists</string>
    <string name="empty_list">This list is empty</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="Vertical">Vertical</string>
    <string name="Square">Square</string>
    <string name="Visualization">Visualization of the main screen</string>
    <string name="Main">Main Screen</string>


    <string name="deleteSup">This action will delete the game from your list</string>
    <string name="deleteTitle">Are you sure you want to delete this game?</string>

    <string name="deleteFailure">Failed to delete the game. Try again later</string>
    <string name="deleteConf">Game deleted</string>

    <string name="settings">Settings</string>
    <string name="profile">Profile</string>

</resources>
