<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/listGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/completeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_list" />

        <RadioButton
            android:id="@+id/playingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playing_list" />

        <RadioButton
            android:id="@+id/plannedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/planned_play_list" />

        <RadioButton
            android:id="@+id/droppedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dropped_list" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/scorePart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="4dp">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/scoreInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_info" />

        <SeekBar
            android:id="@+id/scoreBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5" />
    </LinearLayout>

</LinearLayout>