<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newListButton"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="openGame"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_anchor="@id/bottomAppBar"
        app:layout_anchorGravity="top|center" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_anchor="@+id/relativeLayout"
        app:layout_anchorGravity="bottom|center"
        app:fabCradleVerticalOffset="0dp"
        app:navigationIcon="@drawable/ic_settings"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/playingButtonText"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:onClick="click"
                android:paddingBottom="10sp"
                android:text="@string/playing_list" />

            <fragment
                android:id="@+id/my_fragment2"
                android:name="com.pabloor.vidinv.Searchable"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pendingButtonText"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:onClick="click"
                android:paddingBottom="10sp"
                android:text="@string/planned_play_list" />

            <fragment
                android:id="@+id/my_fragment3"
                android:name="com.pabloor.vidinv.Searchable"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/completeButtonText"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:ems="10"
                android:onClick="click"
                android:paddingBottom="10sp"
                android:text="@string/complete_list" />

            <fragment
                android:id="@+id/my_fragment4"
                android:name="com.pabloor.vidinv.Searchable"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/droppedButtonText"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:ems="10"
                android:onClick="click"
                android:paddingBottom="10sp"
                android:text="@string/dropped_list" />

            <fragment
                android:id="@+id/my_fragment1"
                android:name="com.pabloor.vidinv.Searchable"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.26"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

